--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-asgiref==3.5.2
-Django==4.0.5
-django-crispy-forms==1.14.0
-Pillow==9.1.1
+asgiref==3.4.1
+Django==3.2.13
+Pillow==8.4.0
+pytz==2022.1
 sqlparse==0.4.2
